--- a/Producto.html
+++ b/Producto.html
@@ -31,7 +31,7 @@
                         <a class="nav-link active" aria-current="page" href="#">INICIO</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="CATEGORIA.HTML">CAREGORIA</a>
+                        <a class="nav-link" aria-current="page" href="categoria.html">CAREGORIA</a>
                     </li>
                   
                    
